--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -16,6 +16,8 @@
       href: tutorial-access-private-cloud.md
     - name: 5 - プライベート クラウドのスケーリング
       href: tutorial-scale-private-cloud.md
+    - name: 6 - コンテンツ ライブラリの作成
+      href: tutorial-deploy-vm-content-library.md
 - name: 概念
   items:
     - name: プライベート クラウドとクラスター
