--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -61,6 +61,10 @@
           href: api-management-security-controls.md
     - name: サブスクリプション
       href: api-management-subscriptions.md
+    - name: バージョン
+      href: api-management-versions.md
+    - name: リビジョン
+      href: api-management-revisions.md
     - name: Automation を使用して管理する
       href: automation-manage-api-management.md
     - name: エラー処理
@@ -69,6 +73,8 @@
       href: api-management-api-import-restrictions.md
     - name: セルフホステッド ゲートウェイの概要
       href: self-hosted-gateway-overview.md
+    - name: 可観測性
+      href: observability.md
 - name: 操作方法ガイド
   items:
     - name: API の定義
