--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -114,10 +114,8 @@
   items:
     - name: インデックスとコンストラクトの作成
       items:
-        - name: 基本インデックスの作成
+        - name: インデックスを作成する
           href: search-what-is-an-index.md
-        - name: インデックスの作成 (ポータル)
-          href: search-create-index-portal.md
         - name: 複数言語インデックスの作成
           href: search-language-support.md
         - name: アナライザー
@@ -382,12 +380,6 @@
       href: /powershell/module/az.search
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.search/searchservices
-    - name: .NET
-      items:
-        - name: microsoft.azure.search
-          href: /dotnet/api/overview/azure/search?view=azure-dotnet
-        - name: microsoft.azure.management.search
-          href: /dotnet/api/overview/azure/search/management?view=azure-dotnet
     - name: REST
       items:
         - name: 検索 2020-06-30
@@ -398,10 +390,28 @@
           href: /rest/api/searchmanagement
         - name: 管理 2019-10-01-Preview
           href: /rest/api/searchmanagement/index-2019-10-01-preview
-    - name: Python
+    - name: .NET
+      items:
+        - name: Search API
+          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/search.documents-readme?view=azure-dotnet'
+        - name: 管理 API
+          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/search/management?view=azure-dotnet'
+    - name: Java
       items:
         - name: 管理 API
-          href: /python/api/overview/azure/search?view=azure-python
+          href: 'https://docs.microsoft.com/java/api/overview/azure/search/management?view=azure-java-stable'
+    - name: JavaScript
+      items:
+        - name: Search API
+          href: 'https://docs.microsoft.com/javascript/api/overview/azure/search-documents-readme?view=azure-node-latest'
+        - name: 管理 API
+          href: 'https://docs.microsoft.com/javascript/api/overview/azure/search/management?view=azure-node-latest'
+    - name: Python
+      items:
+        - name: Search API
+          href: 'https://docs.microsoft.com/python/api/overview/azure/search-documents-readme?view=azure-python'
+        - name: 管理 API
+          href: 'https://docs.microsoft.com/python/api/overview/azure/search/management?view=azure-python'
     - name: OData 言語のリファレンス
       items:
         - name: 概要
