--- a/articles/virtual-machines/windows/sqlclassic/TOC.yml
+++ b/articles/virtual-machines/windows/sqlclassic/TOC.yml
@@ -1,59 +1,37 @@
 - name: 概要
   items:
     - name: Windows SQL Server VM
-      href: ../sql/virtual-machines-windows-sql-server-iaas-overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
+      href: ../../../azure-sql/virtual-machines/windows/sql-server-on-azure-vm-iaas-what-is-overview.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/virtual-machines/windows/'
     - name: よく寄せられる質問
-      href: ../sql/virtual-machines-windows-sql-server-iaas-faq.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
+      href: ../../../azure-sql/virtual-machines/windows/frequently-asked-questions-faq.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
 - name: 開始するには
   items:
     - name: Azure portal で VM をプロビジョニングする
-      href: ../sql/virtual-machines-windows-portal-sql-server-provision.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
-    - name: Azure PowerShell を使用して VM をプロビジョニングする
-      href: virtual-machines-windows-classic-ps-sql-create.md
-    - name: VM への接続
-      href: virtual-machines-windows-classic-sql-connect.md
+      href: ../../../azure-sql/virtual-machines/windows/create-sql-vm-portal.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
     - name: SQL Server データベースを移行する
-      href: ../sql/virtual-machines-windows-migrate-sql.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
+      href: ../../../azure-sql/virtual-machines/windows/migrate-to-vm-from-sql-server.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
 - name: 方法
   items:
     - name: 高可用性の構成
       items:
         - name: 高可用性のオプション
-          href: ../sql/virtual-machines-windows-sql-high-availability-dr.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
-        - name: PowerShell を使用した AlwaysOn 可用性グループの構成
-          href: virtual-machines-windows-classic-ps-sql-alwayson-availability-groups.md
-        - name: 可用性グループ向けの内部リスナーの構成
-          href: virtual-machines-windows-classic-ps-sql-int-listener.md
-        - name: 可用性グループ向けの外部リスナーの構成
-          href: virtual-machines-windows-classic-ps-sql-ext-listener.md
-        - name: オンプレミスの可用性グループの Azure への拡張
-          href: virtual-machines-windows-classic-sql-onprem-availability.md
+          href: ../../../azure-sql/virtual-machines/windows/business-continuity-high-availability-disaster-recovery-hadr-overview.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
     - name: 管理する
       items:
-        - name: SQL Server IaaS Agent 拡張機能の使用
-          href: virtual-machines-windows-classic-sql-server-agent-extension.md
-        - name: 自動修正
-          href: virtual-machines-windows-classic-sql-automated-patching.md
-        - name: Azure Key Vault 統合の構成
-          href: virtual-machines-windows-classic-ps-sql-keyvault.md
-        - name: Premium Storage の使用
-          href: virtual-machines-windows-classic-sql-server-premium-storage.md
         - name: セキュリティに関する考慮事項
-          href: ../sql/virtual-machines-windows-sql-security.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
+          href: ../../../azure-sql/virtual-machines/windows/security-considerations-best-practices.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
     - name: バックアップと復元
       items:
         - name: バックアップと復元
-          href: ../sql/virtual-machines-windows-sql-backup-recovery.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
-        - name: 自動バックアップ
-          href: virtual-machines-windows-classic-sql-automated-backup.md
+          href: ../../../azure-sql/virtual-machines/windows/backup-restore.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
         - name: Azure Storage を使用したバックアップと復元
-          href: ../sql/virtual-machines-windows-use-storage-sql-server-backup-restore.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
+          href: ../../../azure-sql/virtual-machines/windows/azure-storage-sql-server-backup-restore-use.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
     - name: パフォーマンスのベスト プラクティス
-      href: ../sql/virtual-machines-windows-sql-performance.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
+      href: ../../../azure-sql/virtual-machines/windows/performance-guidelines-best-practices.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
     - name: アプリケーション パターン
-      href: ../sql/virtual-machines-windows-sql-server-app-patterns-dev-strategies.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
+      href: ../../../azure-sql/virtual-machines/windows/application-patterns-development-strategies.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
 - name: リファレンス
   items:
     - name: Azure PowerShell
@@ -61,22 +39,22 @@
     - name: Azure CLI
       href: /cli/azure/
     - name: T-SQL
-      href: 'https://docs.microsoft.com/sql/t-sql/language-reference'
+      href: /sql/t-sql/language-reference
     - name: SQL Server ドライバー
-      href: 'https://docs.microsoft.com/sql/connect/sql-server-drivers'
+      href: /sql/connect/sql-server-drivers
     - name: REST
       href: /rest/api/
 - name: リソース
   items:
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-machines.html'
+      href: /answers/topics/azure-virtual-machines.html
     - name: 料金計算ツール
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: SQL Server Data Tools (SSDT)
-      href: 'https://docs.microsoft.com/sql/ssdt/download-sql-server-data-tools-ssdt'
+      href: /sql/ssdt/download-sql-server-data-tools-ssdt
     - name: SQL Server Management Studio (SSMS)
-      href: 'https://docs.microsoft.com/sql/ssms/download-sql-server-management-studio-ssms'
+      href: /sql/ssms/download-sql-server-management-studio-ssms
     - name: SQL Server のツール
-      href: 'https://docs.microsoft.com/sql/tools/overview-sql-tools'
+      href: /sql/tools/overview-sql-tools
     - name: Stack Overflow
       href: 'https://stackoverflow.com/search?q=%5Bazure-virtual-machine%5D+sql+server'
